--- a/www/carFront/styles/main.css
+++ b/www/carFront/styles/main.css
@@ -4800,8 +4800,8 @@ a.subdued:last-child {
   background-image: linear-gradient(180deg, #b2b2b2, #b2b2b2 50%, transparent 50%);
 }
 .bar.bar-positive {
-  border-color: #0c60ee;
-  background-color: #387ef5;
+  border-color: #cb5735;
+  background-color: #cb5735;
   background-image: linear-gradient(0deg, #0c60ee, #0c60ee 50%, transparent 50%);
   color: #fff;
 }
@@ -11177,7 +11177,7 @@ div.set-rating span {
 }
 
 .categories-filter {
-  background-color: #333; 
+  background-color: #333;
 }
 
 .categories-filter .button.button-light {
